--- a/vercel.json
+++ b/vercel.json
@@ -15,14 +15,15 @@
       }
     }
   ],
-  "rewrites": [
+  "routes": [
+    { "handle": "filesystem" },
     {
-      "source": "/api/(.*)",
-      "destination": "/backend/index.js"
+      "src": "/api/(.*)",
+      "dest": "/backend/index.js"
     },
     {
-      "source": "/(.*)",
-      "destination": "/admin/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
